# StreamCipher

./: .gitignore  CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt  main.cpp
benchmarks/: CMakeLists.txt  bench_aes.cpp  bench_gf.cpp  bench_stream.cpp
cmake/: DetectArch.cmake
docs/: api.md  architecture.md  file-by-file.md  implementation.md
examples/: CMakeLists.txt  decrypt_file.cpp  encrypt_file.cpp
include/streamcipher/: streamcipher.hpp
include/streamcipher/core/: aes.hpp  bitslice.hpp  cipher.hpp  gf.hpp
include/streamcipher/memory/: pool.hpp  span_utils.hpp
include/streamcipher/simd/: aesni.hpp  simd.hpp
include/streamcipher/stream/: pipeline.hpp  stream.hpp
scripts/: benchmark.sh  build.sh
src/core/: aes.cpp  bitslice.cpp  cipher.cpp  gf.cpp
src/memory/: pool.cpp  span_utils.cpp
src/simd/: aesni.cpp  simd.cpp
src/stream/: pipeline.cpp  stream.cpp
tests/: CMakeLists.txt  bs_debug.cpp  bs_debug2.cpp  sizes.cpp  test_aes.cpp  test_gf.cpp  test_simd.cpp  test_stream.cpp
